// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@roots/bud-dashboard app component > should not render entrypoints when entrypoint assets are undefined 1`] = `
"
╭ compilation 
│
│ entrypoint
│
╰ ...
"
`;

exports[`@roots/bud-dashboard app component > should not render entrypoints when entrypoint assets are undefined 2`] = `
"
╭ compilation 
│
│ entrypoint
│
╰ ...
"
`;

exports[`@roots/bud-dashboard app component > should not render entrypoints when entrypoints are undefined 1`] = `
"
╭ compilation 
│
│
╰ ...
"
`;

exports[`@roots/bud-dashboard app component > should render assets 1`] = `
"
╭ mock 
│
│ assets
│  › foo.png                                                                                    1 kB
│  … 1 additional asset not shown
│
╰ 0ms [0/0 modules cached]
"
`;

exports[`@roots/bud-dashboard app component > should render compilation count for multi-compiler 1`] = `
"
╭ mock [1/2] 
│
│ foo
│  › foo.js                                                                                     1 kB
│
╰ 0ms [0/0 modules cached]

╭ mock [2/2] 
│
│ foo
│  › foo.js                                                                                     1 kB
│
╰ 0ms [0/0 modules cached]
"
`;

exports[`@roots/bud-dashboard app component > should render entrypoints 1`] = `
"
╭ mock 
│
│ foo
│  › foo.js                                                                                     1 kB
│
╰ 0ms [0/0 modules cached]
"
`;
